fixed nav overflow bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body{
 	background-image: url("../img/bg.jpg");
 	background-color: #040c0e;
 	background-repeat: repeat-x;
-	background-size: 100%;
+	background-size: cover;
 }
 
 ul {
@@ -81,6 +81,9 @@ a {
 					float: left;
 					font-size: 18px;
 					color: #fff;
+					max-width: 172px;
+					overflow: hidden;
+					text-overflow: ellipsis;
 				}
 				#header ul li a:hover, #header #current a{
 					border-top: 5px solid #fff;	
@@ -401,7 +404,10 @@ pre {
 		display: block;
 		width: 44%;
 		float: left;
-		border-bottom: 1px dotted #666;				
+		border-bottom: 1px dotted #666;	
+		max-width: 172px;
+		overflow: hidden;
+		text-overflow: ellipsis;		
 	}
 		#main-nav ul li a {
 			float: none;
